--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "npm run start",
+    "dev": "node index.js",
+    "vercel-build": "npm run build"
   },
   "author": "",
   "license": "ISC",
