--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm run start"
+    "build": "npm run start",
+    "vercel-build": "npm run build"
   },
   "author": "",
   "license": "ISC",
