--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "build": "npm run start",
-    "dev": "node index.js",
-    "vercel-build": "npm run dev"
+    "build": "npm run start"
   },
   "author": "",
   "license": "ISC",
