--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "index.js",
+        "src": "/index.js",
         "use": "@vercel/static-build"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "index.js"
+        "dest": "/index.js"
       }
     ]
 }
