--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,11 @@
         "src": "index.js",
         "use": "@vercel/node"
       }
-    ]
+    ],
+    "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "index.js"
+    }
+  ],
 }
