--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node index.js",
     "build": "npm run start"
   },
+  "engines": {
+    "node": ">=18.12.0"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
