--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "node": ">=18.12.0"
   },
   "scripts": {
-    "start": "node index.js",
-    "build": "npm run start"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
