--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "dockerfile",
+        "src": "./index.js",
         "use": "@vercel/node"
       }
     ],
     "routes": [
     {
       "src": "/(.*)",
-      "dest": "dockerfile"
+      "dest": "./index.js"
     }
   ]
 }
