--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "backend",
-  "version": "1.0.0",
+  "version": "18.0.0",
   "main": "index.js",
   "engines": {
-    "node": "18.0.0"
+    "node": "^18.0.0"
   },
   "scripts": {
     "start": "node index.js"
