--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,22 @@
-
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
+  "version": 2,
+  "builds": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "index.js",
+      "use": "@vercel/node-server"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "index.js"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "upload/images"
+    }
+  ],
+  "env": {
+    "NODE_VERSION": "18"
+  }
 }
