--- a/vercel.json
+++ b/vercel.json
@@ -9,14 +9,6 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "index.js"
+      "dest": "/index.js"
     },
-    {
-      "src": "/images/(.*)",
-      "dest": "upload/images"
-    }
-  ],
-  "env": {
-    "NODE_VERSION": "18"
-  }
 }
