--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node"
+      "src": "index.js",
+      "use": "@vercel/node-server"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "./index.js"
+      "src": "/api/(.*)",
+      "dest": "index.js"
+    },
+    {
+      "src": "/images/(.*)",
+      "dest": "upload/images"
     }
-  ]
+  ],
+  "env": {
+    "NODE_VERSION": "18"
+  }
 }
