--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "./index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/"
-    },
-    {
-      "src": "/images/(.*)",
-      "dest": "upload/images"
-    }
-  ],
-  "env": {
-    "NODE_VERSION": "18"
-  }
+    "version": 2,
+    "builds": [
+        {
+            "src": "index.js",
+            "use": "@vercel/node"
+        }
+    ],
+
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "index.js"
+        }
+    ]
 }
