--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "license": "ISC",
   "description": "",
   "engines": {
-    "node": "^18.0.0"
+    "node": "18.x"
   },
   "dependencies": {
     "cors": "^2.8.5",
